[gd_scene load_steps=8 format=2]

[ext_resource path="res://Game/Datapacks/UI/PackVariables.tscn" type="PackedScene" id=1]
[ext_resource path="res://Game/Datapacks/UI/Editors/DatapackCharacterEditor.gd" type="Script" id=2]
[ext_resource path="res://UI/CustomViewportControl.tscn" type="PackedScene" id=3]
[ext_resource path="res://Player/Player3D/Doll3D.tscn" type="PackedScene" id=4]
[ext_resource path="res://GlobalTheme.tres" type="Theme" id=5]

[sub_resource type="Environment" id=1]

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("VBoxContainer/HBoxContainer/DollWrapper/Viewport")

[node name="DatapackCharacterEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 977.0
margin_bottom = 617.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PackVariables" parent="VBoxContainer/HBoxContainer/ScrollContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 977.0
margin_bottom = 25.0

[node name="DollWrapper" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 980.0
margin_right = 1280.0
margin_bottom = 617.0
rect_min_size = Vector2( 300, 0 )
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="VBoxContainer/HBoxContainer/DollWrapper"]
size = Vector2( 32, 32 )
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="VBoxContainer/HBoxContainer/DollWrapper/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.5488, 49.8086 )
environment = SubResource( 1 )
projection = 1
size = 10.0

[node name="Doll3D" parent="VBoxContainer/HBoxContainer/DollWrapper/Viewport" instance=ExtResource( 4 )]

[node name="CustomViewportControl" parent="VBoxContainer/HBoxContainer/DollWrapper" instance=ExtResource( 3 )]
texture = SubResource( 2 )
viewportPath = NodePath("../Viewport")

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="SaveButton" type="Button" parent="VBoxContainer/GridContainer"]
margin_right = 256.0
margin_bottom = 23.0
size_flags_horizontal = 3
text = "Save"

[connection signal="onVariableChange" from="VBoxContainer/HBoxContainer/ScrollContainer/PackVariables" to="." method="_on_PackVariables_onVariableChange"]
[connection signal="pressed" from="VBoxContainer/GridContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
